apps/testing/ctfd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctfd
  labels:
    app = "ctfd"
---
